## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = \
	libsoccerwindow2_model.a

libsoccerwindow2_model_a_SOURCES = \
	ball.cpp \
	debug_client_parser.cpp \
	debug_log_data.cpp \
	debug_log_holder.cpp \
	debug_view_data.cpp \
	main_data.cpp \
	monitor_view_data.cpp \
	options.cpp \
	player.cpp \
	playmode.cpp \
	team.cpp \
	trainer_data.cpp \
	view_holder.cpp

noinst_HEADERS = \
	ball.h \
	debug_client_parser.h \
	debug_log_data.h \
	debug_log_holder.h \
	debug_view_data.h \
	main_data.h \
	monitor_view_data.h \
	options.h \
	player.h \
	playmode.h \
	point.h \
	team.h \
	trainer_data.h \
	view_holder.h

libsoccerwindow2_model_a_CPPFLAGS =
libsoccerwindow2_model_a_CFLAGS = -Wall -W
libsoccerwindow2_model_a_CXXFLAGS = -Wall -W
#libsoccerwindow2_model_a_LDFLAGS =

AM_CPPFLAGS =
AM_CFLAGS = -Wall -W
AM_CXXFLAGS = -Wall -W
AM_LDFLAGS =
##AM_LDADD =

EXTRA_DIST = model.pro

CLEANFILES = *~
